--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Nav-bar Design</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
@@ -23,10 +23,88 @@
 
     <header>
 
-      <nav>  </nav>
+        <nav>
+          <div class="logo"><p><i class="fa fa-cloud fa-1x" aria-hidden="true"></i><span class="bold"> cloud</span><span class="accent">out</span></p></div>
+            <ul>
+
+                <li><a href="">home</a></li>
+                <li><a href="">about</a></li>
+                <li><a href="">contact</a></li>
+                <li><a href=""><span class="box-button">login</span></a></li>
+
+            </ul>
+        </nav>
 
     </header>
 
+<h4>^full fontawesome logo</h4><h6></h6>
+
+    <header>
+
+        <nav>
+          <div class="logo2"><img src="images/logo.png" alt="" /></div>
+            <ul>
+
+                <li><a href="">home</a></li>
+                <li><a href="">about</a></li>
+                <li><a href="">contact</a></li>
+                <li><a href=""><span class="box-button">login</span></a></li>
+
+            </ul>
+        </nav>
+
+    </header>
+<h4>^png logo</h4><h6>had to increase fontsize to centre png properly vertically</h6>
+
+
+
+<header>
+
+    <nav>
+      <div class="logo2"><img src="images/logo.png" alt="" /></div>
+        <ul>
+
+            <li><a href="">home</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">contact</a></li>
+            <li><button>login</button></a></li>
+
+        </ul>
+    </nav>
+
+</header>
+<h4>^real button nav</h4><h6>had to zero margins on button for it to sit to the right and have the rest of the navbar at correct distance. also had to include 16px font size.</h6>
+
+<header>
+
+    <nav>
+      <div class="logo"><p><i class="fa fa-cloud fa-1x" aria-hidden="true"></i><span class="bold"> cloud</span><span class="accent">out</span></p></div>
+
+      <div class="search">
+
+        <form method="get" action="http://www.youtube.com/search">
+          <input type="text" name="q" size="30" maxlength="155" value="">
+
+          <button class="icon-search"><i class="fa fa-search" aria-hidden="true"></i></button>
+
+      </form>
+
+    </div>
+
+
+        <ul>
+
+            <li><a href="">home</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">contact</a></li>
+            <li><a href=""><span class="box-button">login</span></a></li>
+
+        </ul>
+    </nav>
+
+</header>
+
+<h4>^Search bar</h4><h6>input and button had to have margin of 13 to centre. also input has 30 line height and icon has 24.</h6>
 
 
 
